@startuml
skinparam classAttributeIconSize 0
' --- Models ---
class Category {
  id: AutoField
  name: CharField
}
class Product {
  id: AutoField
  name: CharField
  purchase_price: FloatField
  selling_price: FloatField
  stock: IntegerField
  created_at: DateTimeField
}
class Sale {
  id: AutoField
  invoice_number: CharField
  quantity: PositiveIntegerField
  discount: FloatField
  tax_percent: FloatField
  total_amount: FloatField
  sale_date: DateTimeField
  payment_method: CharField
  customer_name: CharField
}
class Expense {
  id: AutoField
  title: CharField
  category: CharField
  amount: FloatField
  expense_date: DateTimeField
}
' --- Relationships ---
Product --> Category : category (FK)
Sale --> Product : product (FK)
' --- Serializers ---
package Serializers {
  class CategorySerializer <<serializer>> {}
  class ProductSerializer <<serializer>> {}
  class SaleSerializer <<serializer>> {}
  class ExpenseSerializer <<serializer>> {}
  class RegisterSerializer <<serializer>> {}
}
CategorySerializer --> Category
ProductSerializer --> Product
SaleSerializer --> Sale
ExpenseSerializer --> Expense
RegisterSerializer ..> User : creates
' --- Views / API ---
package Views {
  class ProductListCreateView <<view>> {}
  class ProductDetailView <<view>> {}
  class SaleListCreateView <<view>> {}
  class SaleDetailView <<view>> {}
  class ExpenseListCreateView <<view>> {}
  class ExpenseDetailView <<view>> {}
  class CategoryListCreateView <<view>> {}
  class register_user <<view function>> {}
}
ProductListCreateView --> ProductSerializer
ProductDetailView --> ProductSerializer
SaleListCreateView --> SaleSerializer
SaleDetailView --> SaleSerializer
ExpenseListCreateView --> ExpenseSerializer
ExpenseDetailView --> ExpenseSerializer
CategoryListCreateView --> CategorySerializer
register_user --> RegisterSerializer
@enduml